// Vitest Snapshot v1

exports[`TreeSelect > multiple work > render work 1`] = `
"<div class=\\"ix-tree-select ix-selector ix-selector-md ix-selector-opened ix-selector-single\\">
  <!---->
  <div class=\\"ix-selector-content\\">
    <div class=\\"ix-selector-item\\"><span class=\\"ix-selector-item-label\\">Node 0</span>
      <!---->
    </div>
    <div class=\\"ix-selector-input\\"><input class=\\"ix-selector-input-inner\\" style=\\"opacity: 0;\\" autocomplete=\\"off\\" readonly=\\"\\">
      <!---->
    </div>
    <div class=\\"ix-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" style=\\"transform: rotate(180deg);\\" role=\\"img\\" aria-label=\\"down\\"></i></div>
  </div>
</div>
<!--teleport start-->
<!--teleport end-->"
`;

exports[`TreeSelect > single work > custom keys work 1`] = `
"<div class=\\"ix-tree-select ix-selector ix-selector-md ix-selector-opened ix-selector-single\\">
  <!---->
  <div class=\\"ix-selector-content\\">
    <div class=\\"ix-selector-item\\"><span class=\\"ix-selector-item-label\\">Node 0</span>
      <!---->
    </div>
    <div class=\\"ix-selector-input\\"><input class=\\"ix-selector-input-inner\\" style=\\"opacity: 0;\\" autocomplete=\\"off\\" readonly=\\"\\">
      <!---->
    </div>
    <div class=\\"ix-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" style=\\"transform: rotate(180deg);\\" role=\\"img\\" aria-label=\\"down\\"></i></div>
  </div>
</div>
<!--teleport start-->
<!--teleport end-->"
`;

exports[`TreeSelect > single work > render work 1`] = `
"<div class=\\"ix-tree-select ix-selector ix-selector-md ix-selector-opened ix-selector-single\\">
  <!---->
  <div class=\\"ix-selector-content\\">
    <div class=\\"ix-selector-item\\"><span class=\\"ix-selector-item-label\\">Node 0</span>
      <!---->
    </div>
    <div class=\\"ix-selector-input\\"><input class=\\"ix-selector-input-inner\\" style=\\"opacity: 0;\\" autocomplete=\\"off\\" readonly=\\"\\">
      <!---->
    </div>
    <div class=\\"ix-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" style=\\"transform: rotate(180deg);\\" role=\\"img\\" aria-label=\\"down\\"></i></div>
  </div>
</div>
<!--teleport start-->
<!--teleport end-->"
`;

exports[`TreeSelect > single work > searchFn work 1`] = `
"<div class=\\"ix-tree-select ix-selector ix-selector-md ix-selector-single\\" searchvalue=\\"node\\">
  <!---->
  <div class=\\"ix-selector-content\\">
    <div class=\\"ix-selector-item\\"><span class=\\"ix-selector-item-label\\">Node 0</span>
      <!---->
    </div>
    <div class=\\"ix-selector-input\\"><input class=\\"ix-selector-input-inner\\" style=\\"opacity: 0;\\" autocomplete=\\"off\\" readonly=\\"\\">
      <!---->
    </div>
    <div class=\\"ix-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" style=\\"transform: rotate(0deg);\\" role=\\"img\\" aria-label=\\"down\\"></i></div>
  </div>
</div>"
`;

exports[`TreeSelect > single work > searchFn work 2`] = `
"<div class=\\"ix-tree-select ix-selector ix-selector-md ix-selector-single\\" searchvalue=\\"node\\">
  <!---->
  <div class=\\"ix-selector-content\\">
    <div class=\\"ix-selector-item\\"><span class=\\"ix-selector-item-label\\">Node 0</span>
      <!---->
    </div>
    <div class=\\"ix-selector-input\\"><input class=\\"ix-selector-input-inner\\" style=\\"opacity: 0;\\" autocomplete=\\"off\\" readonly=\\"\\">
      <!---->
    </div>
    <div class=\\"ix-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" style=\\"transform: rotate(0deg);\\" role=\\"img\\" aria-label=\\"down\\"><svg viewBox=\\"0 0 1024 1024\\" focusable=\\"false\\" aria-hidden=\\"true\\" data-icon=\\"down\\">
          <path d=\\"m294.777 395.325 208.172 208.172c4.999 5 13.103 5 18.102 0l208.172-208.172c4.999-4.999 13.103-4.999 18.102 0l27.153 27.153c4.999 4.999 4.999 13.103 0 18.102L521.051 694.007c-4.999 4.999-13.103 4.999-18.102 0L249.522 440.58c-4.999-4.999-4.999-13.103 0-18.102l27.153-27.153c4.999-4.999 13.103-4.999 18.102 0Z\\"></path>
        </svg></i></div>
  </div>
</div>"
`;

exports[`TreeSelect > single work > searchFn work 3`] = `
"<div class=\\"ix-tree-select ix-selector ix-selector-md ix-selector-single\\" searchvalue=\\"node\\">
  <!---->
  <div class=\\"ix-selector-content\\">
    <div class=\\"ix-selector-item\\"><span class=\\"ix-selector-item-label\\">Node 0</span>
      <!---->
    </div>
    <div class=\\"ix-selector-input\\"><input class=\\"ix-selector-input-inner\\" style=\\"opacity: 0;\\" autocomplete=\\"off\\" readonly=\\"\\">
      <!---->
    </div>
    <div class=\\"ix-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" style=\\"transform: rotate(0deg);\\" role=\\"img\\" aria-label=\\"down\\"><svg viewBox=\\"0 0 1024 1024\\" focusable=\\"false\\" aria-hidden=\\"true\\" data-icon=\\"down\\">
          <path d=\\"m294.777 395.325 208.172 208.172c4.999 5 13.103 5 18.102 0l208.172-208.172c4.999-4.999 13.103-4.999 18.102 0l27.153 27.153c4.999 4.999 4.999 13.103 0 18.102L521.051 694.007c-4.999 4.999-13.103 4.999-18.102 0L249.522 440.58c-4.999-4.999-4.999-13.103 0-18.102l27.153-27.153c4.999-4.999 13.103-4.999 18.102 0Z\\"></path>
        </svg></i></div>
  </div>
</div>"
`;

exports[`TreeSelect > single work > searchable work 1`] = `
"<div class=\\"ix-tree-select ix-selector ix-selector-md ix-selector-opened ix-selector-searchable ix-selector-single\\">
  <!---->
  <div class=\\"ix-selector-content\\">
    <div class=\\"ix-selector-item\\"><span class=\\"ix-selector-item-label\\">Node 0</span>
      <!---->
    </div>
    <div class=\\"ix-selector-input\\"><input class=\\"ix-selector-input-inner\\" style=\\"opacity: 0;\\" autocomplete=\\"off\\" readonly=\\"\\">
      <!---->
    </div>
    <div class=\\"ix-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" style=\\"transform: rotate(0deg);\\" role=\\"img\\" aria-label=\\"down\\"></i></div>
  </div>
</div>
<!--teleport start-->
<!--teleport end-->"
`;

exports[`TreeSelect > single work > searchable work 2`] = `
"<div class=\\"ix-tree-select ix-selector ix-selector-md ix-selector-opened ix-selector-single\\">
  <!---->
  <div class=\\"ix-selector-content\\">
    <div class=\\"ix-selector-input\\"><input class=\\"ix-selector-input-inner\\" style=\\"opacity: 0;\\" autocomplete=\\"off\\" readonly=\\"\\">
      <!---->
    </div>
    <div class=\\"ix-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" style=\\"transform: rotate(180deg);\\" role=\\"img\\" aria-label=\\"down\\"><svg viewBox=\\"0 0 1024 1024\\" focusable=\\"false\\" aria-hidden=\\"true\\" data-icon=\\"down\\">
          <path d=\\"m294.777 395.325 208.172 208.172c4.999 5 13.103 5 18.102 0l208.172-208.172c4.999-4.999 13.103-4.999 18.102 0l27.153 27.153c4.999 4.999 4.999 13.103 0 18.102L521.051 694.007c-4.999 4.999-13.103 4.999-18.102 0L249.522 440.58c-4.999-4.999-4.999-13.103 0-18.102l27.153-27.153c4.999-4.999 13.103-4.999 18.102 0Z\\"></path>
        </svg></i></div>
  </div>
</div>
<!--teleport start-->
<!--teleport end-->"
`;
